# adhd-study-guide-capstone

./: .env.example  .gitignore  ADR.md  PROJECT_SUMMARY.md  PROMPTS.md  README.md  SUBMISSION_CHECKLIST.md  main.py  pyproject.toml  requirements.txt  run_demo.py  setup.sh
data/: create_golden_dataset.py  golden_dataset.jsonl  make_txt.py  manifest.csv  test_holdout.csv  train_wiki.csv  train_wiki_gold.csv
data/baselines/: llama3_baseline.csv
data/raw/art/: impressionism.txt
data/raw/astronomy/: black_holes.txt  solar_system.txt
data/raw/biology/: cell_division.txt  mitochondria.txt  photosynthesis.txt  plate_tectonics.txt
data/raw/business/: swot.txt
data/raw/chemistry/: acids_bases.txt  ph_scale.txt
data/raw/computer_science/: algorithms.txt  binary.txt
data/raw/economics/: supply_demand.txt
data/raw/engineering/: simple_machines.txt
data/raw/environmental_science/: greenhouse_effect.txt
data/raw/ethics/: utilitarianism.txt
data/raw/finance/: compound_interest.txt
data/raw/geography/: water_cycle.txt
data/raw/government/: separation_powers.txt
data/raw/history/: bastille.txt
data/raw/law/: offer_acceptance.txt
evaluations/: baseline_comparison.py  eval_harness.py  results.json  results_gemini.json  run_evaluation.py
scripts/: create_golden_dataset.py  fix_model.py  force_fuse.py  generate_gold_local_fast.py  generate_raw_files.py  get_data.py  prepare_mlx_data.py  run_baseline.py  test_inference.py
src/: api_client.py  app.py  app_clientA.py  prompt_library.py
tests/: __init__.py  test_pipeline.py  test_prompts.py
(+8 files in other folders)
